# fldigi-py

./: README.md  pyproject.toml
flgidi-py/: __init__.py
